fixed whitespace on line 13 and attribute repeat on line 103 from detail.scss

--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -10,7 +10,6 @@ $container-width: 900px;
   height: 20px;
   margin-bottom: 33px;
   cursor: pointer;
-  
 }
 
 .back-arrow::before {
@@ -100,7 +99,6 @@ $container-width: 900px;
     margin-top: 33px;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
   }
 
   .container-book {
